- Fixed: Alignment for better tab groups - Fixed: Margin of the new tab button in collapsed mode

--- a/Neo Zen V1.0.0/NeoZen/Features/BetterTabGroups/BetterTabGroups-Collapsed.css
+++ b/Neo Zen V1.0.0/NeoZen/Features/BetterTabGroups/BetterTabGroups-Collapsed.css
@@ -2,6 +2,13 @@
 
 @media not (-moz-bool-pref: "neo-features-better-tab-groups-disabled") {
     :root:not([zen-sidebar-expanded="true"]) {
+        tab-group:not([split-view-group]) {
+            &:not([collapsed]) {
+                & .tab-group-label-container>label::before {
+                    left: 8px !important;
+                }
+            }
+        }
 
         /*HIDE A FUCKING PSEUDO ELEMENT THAT IS COMPLETELY USELESS*/
 
@@ -34,7 +41,7 @@
         }
 
         .tab-group-label-container>label::before {
-            left: 7px !important;
+            left: 8px !important;
         }
     }
 }
